new proj/src/objects/GE_AL_Service_Checklist__c.object
<CustomObject>
    <fields>
        <fullName>GE_AL_AMTR__c</fullName>
        <label>AMTR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_A_B__c</fullName>
        <description>Used on Courtesy Call Report</description>
        <label>A/B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_A_Gnd__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>A - Gnd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_A__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Auto_Transformer_Connection__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Auto Transformer Connection</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Auto_Transformer_KVA__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Auto Transformer KVA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Auto_Transformer_Manuf__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Auto Transformer Manuf.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Auto_Transformer_Range__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Auto Transformer Range</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Auto_Transformer_Setting__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Auto Transformer Setting</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_B_C__c</fullName>
        <description>Used on Courtesy Call Report</description>
        <label>B/C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_B_Gnd__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>B - Gnd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_B__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_CSG_PSI__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>CSG-PSI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_C_A__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>C/A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_C_Gnd__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>C - Gnd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_C_P_T_KVA__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <inlineHelpText>Control Power Transformer</inlineHelpText>
        <label>C.P.T. KVA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_C_P_T_Manuf__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <inlineHelpText>Control Power Transformer</inlineHelpText>
        <label>C.P.T. Manuf.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_C_P_T_Range__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <inlineHelpText>Control Power Transformer</inlineHelpText>
        <label>C.P.T. Range</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_C_P_T_Setting__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <inlineHelpText>Control Power Transformer</inlineHelpText>
        <label>C.P.T. Setting</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_C__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Armor__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Cable Armor</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Drop__c</fullName>
        <label>Cable Drop</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Length__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Cable Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Loss__c</fullName>
        <formula>GE_AL_Cable_Drop__c  * 1000 *  GE_AL_Footage__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Cable Loss</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Manuf__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Cable Manuf.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Rd_Fl__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Cable Rd./Fl.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Cable_Size__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Cable Size</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Changes_Made__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Changes Made</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_AL_Chart__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>Chart</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_AL_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_AL_Controller_Serial_Number__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Controller Serial Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Controller_Type__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Controller Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Customer_Rep_Contractor_Name__c</fullName>
        <label>Customer Rep/Contractor Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_DHP__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>DHP</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_DHT__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>DHT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Display_Serial_Number__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Display Serial Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Download_to_Mobile__c</fullName>
        <formula>AND( 
NOT(ISBLANK(GE_AL_Location__c)), 
GE_AL_Location__r.GE_DS_Download_to_Mobile__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Download to Mobile?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GE_AL_End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_AL_Final_Ratio__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <inlineHelpText>Current Transformers Final Ratio</inlineHelpText>
        <label>Final Ratio</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Fluid_Level__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>Fluid Level</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Footage__c</fullName>
        <label>Footage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Ft_Stg_Lift__c</fullName>
        <label>Head Capacity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_HP_Motor_Load__c</fullName>
        <description>ESP Installation Worksheet</description>
        <label>HP Motor Load</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_HP_Required__c</fullName>
        <formula>GE_AL_No_of_Stage__c*GE_AL_HP_Motor_Load__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HP Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_High_Load_Thrust_Bearing__c</fullName>
        <label>High Load Thrust Bearing?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_High_Strength_Shaft__c</fullName>
        <label>High Strength Shaft?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Installed_Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Installed Product</label>
        <referenceTo>SVMXC__Installed_Product__c</referenceTo>
        <relationshipLabel>Service Checklists</relationshipLabel>
        <relationshipName>Service_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Junction_Box_Grounded__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Junction Box Grounded</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Junction_Box_Range__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Junction Box Range</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Junction_Box_Type__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Junction Box Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_KVA_Required__c</fullName>
        <formula>(1.73 * GE_AL_Surface_Volts__c *  GE_AL_AMTR__c)/1000</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>KVA Required</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Load_A_B__c</fullName>
        <label>Load A-B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Load_A_Gnd__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Load A-Gnd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Load_B_C__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Load B-C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Load_B_Gnd__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Load B-Gnd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Load_C_A__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Load C-A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Load_C_Gnd__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Load C-Gnd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Location</label>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>Service Checklists</relationshipLabel>
        <relationshipName>Service_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Amps__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Motor Amps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_HP__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Motor HP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Manuf__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Motor Manuf.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Series__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Motor Series</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor_Volts__c</fullName>
        <description>Used on GE AL Controls &amp; SPS Start Up Worksheet</description>
        <label>Motor Volts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Motor__c</fullName>
        <label>Motor</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Mtr_Volts__c</fullName>
        <description>ESP Installation Worksheet</description>
        <label>Mtr Volts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_No_Load_A_B__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>No Load A-B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_No_Load_A_Gnd__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>No Load A-Gnd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_No_Load_B_C__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>No Load B-C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_No_Load_B_Gnd__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>No Load B-Gnd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_No_Load_C_A__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>No Load C-A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_No_Load_C_Gnd__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>No Load C-Gnd</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_No_of_Stage__c</fullName>
        <label>No of Stage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_O_L__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>O/L</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Over_Load__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <inlineHelpText>Controller</inlineHelpText>
        <label>Over Load</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>GE_AL_Problems_Encountered__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Problems Encountered</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_Manuf__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Pump Manuf.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_Series__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Pump Series</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_Setting_Depth__c</fullName>
        <label>Pump Setting Depth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_Stages__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Pump Stages</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pump_Type__c</fullName>
        <description>Used in Maintenance Service Report</description>
        <label>Pump Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Pumping_Setting_Depth_Vs_TDH__c</fullName>
        <formula>GE_AL_Pump_Setting_Depth__c/GE_AL_TDH__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Pumping Setting Depth Vs TDH</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_R_A_B__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>A - B</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_R_B_C__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>B - C</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_R_C_A__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>C - A</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Ratio__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <inlineHelpText>Current Transformers Ratio</inlineHelpText>
        <label>Ratio</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Restart_Timer_Min__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <inlineHelpText>Controller</inlineHelpText>
        <label>Restart Timer Min.</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Service_Checklist_Type__c</fullName>
        <label>Service Checklist Type</label>
        <picklist>
            <picklistValues>
                <fullName>ESP Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Courtesy Call</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maintenance Service</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_AL_Service_Technician_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Service Technician Name</label>
        <referenceTo>SVMXC__Service_Group_Members__c</referenceTo>
        <relationshipLabel>Service Checklists</relationshipLabel>
        <relationshipName>Service_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_AL_Surface_Volts__c</fullName>
        <formula>GE_AL_Mtr_Volts__c+GE_AL_Cable_Loss__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Surface Volts</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Surge_Suppressor_Amps__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <inlineHelpText>Surge Suppressor / Arrestors</inlineHelpText>
        <label>Surge Suppressor Amps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Surge_Suppressor_Mauf__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <inlineHelpText>Surge Suppressor / Arrestors</inlineHelpText>
        <label>Surge Suppressor Mauf.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Surge_Suppressor_Volts__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <inlineHelpText>Surge Suppressor / Arrestors</inlineHelpText>
        <label>Surge Suppressor Volts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_TBG_PSI__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>TBG-PSI</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_TDH__c</fullName>
        <formula>GE_AL_No_of_Stage__c  *  GE_AL_Ft_Stg_Lift__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TDH</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Timer__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>Timer</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Transformer_Connection__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Transformer Connection</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Transformer_KVA__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Transformer KVA</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Transformer_Manuf__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Transformer Manuf.</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Transformer_Primary__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Transformer Primary</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Transformer_Secondary__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>Transformer Secondary</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_U_L__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>U/L</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_Under_Delay_Sec__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <inlineHelpText>Controller</inlineHelpText>
        <label>Under Delay Sec</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Under_Load__c</fullName>
        <description>Used on GE AL Controls &amp; SPS Start Up Worksheet</description>
        <inlineHelpText>Amps</inlineHelpText>
        <label>Under Load</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_VSD_Amps__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>VSD Amps</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_VSD_Grounded__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>VSD Grounded</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_VSD_Mfgr__c</fullName>
        <description>Used on GE AL Controls &amp; SPS Start Up Worksheet</description>
        <label>VSD Mfgr</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_VSD_Serial_Number__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>VSD Serial Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_VSD_Volts__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <label>VSD Volts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GE_AL_Work_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Work Order</label>
        <referenceTo>SVMXC__Service_Order__c</referenceTo>
        <relationshipLabel>Service Checklists</relationshipLabel>
        <relationshipName>Service_Checklists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_AL_Wraps__c</fullName>
        <description>Used on Maintenance Service Report</description>
        <inlineHelpText>Current Transformers Wraps</inlineHelpText>
        <label>Wraps</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X1__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>#1</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X2__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>#2</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_AL_X3__c</fullName>
        <description>Used on GE AL Courtesy Call Report</description>
        <label>#3</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>Service Checklist</label>
    <nameField>
        <label>Service Checklist Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Service Checklists</pluralLabel>
    <recordTypes>
        <fullName>GE_AL_Courtesy_Call</fullName>
        <active>true</active>
        <description>Courtesy Call Report</description>
        <label>Courtesy Call</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_AL_ESP_Installation</fullName>
        <active>true</active>
        <description>ESP Installation Worksheet</description>
        <label>ESP Installation</label>
    </recordTypes>
    <recordTypes>
        <fullName>GE_AL_Maintenance_Service</fullName>
        <active>true</active>
        <description>Maintenance Service Report</description>
        <label>Maintenance Service</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>